# tuaorial-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: db.py  main.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py  tasks.py
api/schemas/: done.py  task.py
tests/: test_main.py
